labs/kube-proxy/svc.yml
apiVersion: v1
kind: Service
metadata:
  name: backend-kp-svc
spec:
  selector:
    app: backend-kp
  ports:
    - port: 80
      targetPort: 8080   # ❌ ERROR INTENCIONAL
