labs/kube-proxy/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: backend-kp-ingress
spec:
  rules:
  - host: kp.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: backend-kp-svc
            port:
              number: 80
